--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 	"scripts": {
 		"install": "node-gyp-build",
 		"build": "npm run build:gyp && npm run compile",
-		"build:gyp": "prebuildify -t 18.20.8 -t 20.19.3 -t 22.17.0 -t 24.4.0 --strip",
-		"build:debug": "prebuildify -t 18.20.8 -t 20.19.3 -t 22.17.0 -t 24.4.0 --debug",
+		"build:gyp": "prebuildify -t 18.20.8 -t 20.19.3 -t 22.17.0 --strip",
+		"build:debug": "prebuildify -t 18.20.8 -t 20.19.3 -t 22.17.0 --debug",
 		"compile": "npm run build:tsc",
 		"build:tsc": "tsc",
 		"test": "npx jest",
@@ -37,7 +37,7 @@
 	},
 	"license": "MIT",
 	"engines": {
-		"node": "^18.0.0 || ^20.0.0 || ^22.0.0 || ^24.0.0"
+		"node": "^18.0.0 || ^20.0.0 || ^22.0.0"
 	},
 	"os": [
 		"darwin",
