--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
 		"url": "git+https://github.com/Totto16/ass_parser_c.git"
 	},
 	"dependencies": {
-		"node-gyp-build": "^4.8.4"
+		"node-gyp-build": "^4.8.4",
+		"nan": "^2.23.0"
 	},
 	"devDependencies": {
-		"@types/jest": "^29.5.14",
-		"jest": "^29.7.0",
-		"nan": "^2.22.2",
+		"@types/jest": "^30.0.0",
+		"jest": "^30.0.4",
 		"prebuildify": "^6.0.2",
 		"ts-jest": "^29.4.0",
 		"ts-node": "^10.9.2",
